--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -1,4 +1,4 @@
-<head>
+<!-- breaks site <head>
   <title>MMO demo</title>
   <link href="styles/client.css" rel="stylesheet" type="text/css">
 </head>
@@ -13,4 +13,4 @@
   <script>
     require('client/game').init("game");
   </script>
-</body>
+</body> -->
