--- a/playfab-meteor-phaser-login.html
+++ b/playfab-meteor-phaser-login.html
@@ -1,7 +1,3 @@
-<head>
-
-</head>
-
 <body>
   {{> login}}
 </body>
@@ -9,9 +5,9 @@
 <template name="login">
     <div class="loginWrapper well">
         <form id="loginForm" method="#">
-            <p id="usernameText">Username</p>
-            <input type="text" name="username" value="Type Username Here" id= "username">
-        
+            <p >Username</p>
+            <input type="text" id="usernameText" name="username" value="Type Username Here">
+
 
             <input type="submit" value="Log In">
         </form>
