fixing bug in js files

--- a/playfab-meteor-phaser.html
+++ b/playfab-meteor-phaser.html
@@ -1,5 +1,7 @@
 <head>
   <title>High on Life</title>
+  <script src="/playfabSDK.js" charset="utf-8"></script>
+  <script src="/playfab.js" charset="utf-8"></script>
 </head>
 
 <body>
