--- a/playfab-meteor-phaser.html
+++ b/playfab-meteor-phaser.html
@@ -5,9 +5,19 @@
 </head>
 
 <body>
-  {{> game}}
+  {{> login}}
 </body>
 
 <template name="game">
-	{{game}}
+    <script src="/highOnLife.js" charset="utf-8"></script>
+</template>
+
+<template name="login">
+    <div class="loginWrapper well">
+        <form id="loginForm" method="#">
+            <p >Username</p>
+            <input type="text" id="usernameText" name="username" value="Type Username Here">
+            <input type="submit" value="Log In">
+        </form>
+    </div>
 </template>
