--- a/playfab-meteor-phaser.html
+++ b/playfab-meteor-phaser.html
@@ -2,6 +2,7 @@
   <title>High on Life</title>
   <script src="/playfabSDK.js" charset="utf-8"></script>
   <script src="/playfab.js" charset="utf-8"></script>
+  <script src="/js/CameraShake.js" charset="utf-8"></script>
 </head>
 
 <body>
