--- a/playfab-meteor-phaser.html
+++ b/playfab-meteor-phaser.html
@@ -22,5 +22,21 @@
     </div>
     <div>
         <h3 class="headline">Leaderboard</h3>
+        <h5>High Score</h5>
+
+        <ul>
+            <li>
+                Jeff: 7790
+            </li>
+            <li>
+                Greg: 6790
+            </li>
+            <li>
+                Phil: 4730
+            </li>
+            <li>
+                Tess: 710    
+            </li>
+        </ul>
     </div>
 </template>
