--- a/playfab-meteor-phaser.html
+++ b/playfab-meteor-phaser.html
@@ -8,7 +8,7 @@
 </body>
 
 <template name="game">
-    <script src="/highOnLife.js" charset="utf-8"></script>
+    <script src="highOnLife.js" charset="utf-8"></script>
 </template>
 
 <template name="login">
